compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__add_missing_patterns_custom_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1443
expression: "\nrecord Wibble {\n  Wibble\n  Wobble\n  Wubble\n}\n\npub fn main(wibble: Wibble) {\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

record Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main(wibble: Wibble) {
  case wibble {
  ▔▔▔▔▔↑       
    Wobble -> Nil
  }
}


----- AFTER ACTION

record Wibble {
  Wibble
  Wobble
  Wubble
}

pub fn main(wibble: Wibble) {
  case wibble {
    Wobble -> Nil
    Wibble -> todo
    Wubble -> todo
  }
}
