compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_assert_custom_type_with_label_shorthands_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 822
expression: "\npub record Wibble { Wibble(arg: Int, arg2: Float) }\npub fn main() {\n  let assert Wibble(arg2:, ..) = Wibble(arg: 1, arg2: 1.0)\n}\n"
---
----- BEFORE ACTION

pub record Wibble { Wibble(arg: Int, arg2: Float) }
pub fn main() {
  let assert Wibble(arg2:, ..) = Wibble(arg: 1, arg2: 1.0)
                    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION

pub record Wibble { Wibble(arg: Int, arg2: Float) }
pub fn main() {
  let arg2 = case Wibble(arg: 1, arg2: 1.0) {
    Wibble(arg2:, ..) -> arg2
    _ -> panic
  }
}
