compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_let_assert_string_prefix_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 766
expression: "pub fn main() {\n  let assert \"_\" ++ thing = \"_Hello\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  let assert "_" ++ thing = "_Hello"
              ↑                     
}


----- AFTER ACTION
pub fn main() {
  let thing = case "_Hello" {
    "_" ++ thing -> thing
    _ -> panic
  }
}
