compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__fill_in_labelled_args_works_with_record_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  Wibble()\n}\n\npub record Wibble { Wibble(arg1: Int, arg2: String) }\n "
---
----- BEFORE ACTION

pub fn main() {
  Wibble()
  ▔▔▔▔▔▔▔↑
}

pub record Wibble { Wibble(arg1: Int, arg2: String) }
 


----- AFTER ACTION

pub fn main() {
  Wibble(arg1: todo, arg2: todo)
}

pub record Wibble { Wibble(arg1: Int, arg2: String) }
