compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__label_shorthand_action_only_applies_to_selected_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n    let arg1 = 1\n    let arg2 = 2\n    Wibble(arg2: arg2, arg1: arg1)\n}\n\npub record Wibble { Wibble(arg1: Int, arg2: Int) }\n"
---
----- BEFORE ACTION

pub fn main() {
    let arg1 = 1
    let arg2 = 2
    Wibble(arg2: arg2, arg1: arg1)
    ▔▔▔▔▔▔▔▔▔▔▔↑                  
}

pub record Wibble { Wibble(arg1: Int, arg2: Int) }


----- AFTER ACTION

pub fn main() {
    let arg1 = 1
    let arg2 = 2
    Wibble(arg2: , arg1: arg1)
}

pub record Wibble { Wibble(arg1: Int, arg2: Int) }
