compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__label_shorthand_action_works_on_labelled_pattern_call_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n    let Wibble(arg1: arg1, arg2: arg2) = todo\n    arg1 + arg2\n}\n\npub record Wibble { Wibble(arg1: Int, arg2: Int) }\n"
---
----- BEFORE ACTION

pub fn main() {
    let Wibble(arg1: arg1, arg2: arg2) = todo
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑
    arg1 + arg2
}

pub record Wibble { Wibble(arg1: Int, arg2: Int) }


----- AFTER ACTION

pub fn main() {
    let Wibble(arg1: , arg2: ) = todo
    arg1 + arg2
}

pub record Wibble { Wibble(arg1: Int, arg2: Int) }
