compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_constructor_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 522
expression: "pub record Box { Box(Int) }\npub fn main() {\n    let Box(innerValue) = Box(203)\n}"
---
----- BEFORE ACTION
pub record Box { Box(Int) }
pub fn main() {
    let Box(innerValue) = Box(203)
            ↑                     
}


----- AFTER ACTION
pub record Box { Box(Int) }
pub fn main() {
    let Box(inner_value) = Box(203)
}
