compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_constructor_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 534
expression: "pub record Box { Box(Int) }\npub fn main() {\n    let Box(_ignoredInner) = Box(203)\n}"
---
----- BEFORE ACTION
pub record Box { Box(Int) }
pub fn main() {
    let Box(_ignoredInner) = Box(203)
            ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub record Box { Box(Int) }
pub fn main() {
    let Box(_ignored_inner) = Box(203)
}
