compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_string_prefix_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 593
expression: "pub fn main() {\n    let assert \"prefix\" ++ coolSuffix = \"prefix-suffix\"\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert "prefix" ++ coolSuffix = "prefix-suffix"
                        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
pub fn main() {
    let assert "prefix" ++ cool_suffix = "prefix-suffix"
}
